
	IRC Features:
	* SSL support for IRC connections (Daniel Atallah)
	* Show an error message when temporarily unable to join an IRC
	  channel or change your nick (Richard Laager)
	* Added /nickserv, /memoserv, /chanserv and /operserv
	  commands (Joao Luís Marques Pinto)

	Jabber Features:
	* Support for SRV lookups
	* Support for buddy icons
	* Jabber User Directory searching

	Other Protocol Changes:
	* Bonjour (Rendezvous) protocol support (Juanjo Molinero Horno, Google
	  Summer of Code)
	* Updated Gadu-Gadu protocol support (Bartosz Oler, Google Summer of
	  Code)
	* SIP/SIMPLE support (Thomas Butter, Google Summer of Code)
	* Sametime protocol support
	* SILC whiteboard support (Pekka Riikonen)

	Other Noteworthy Changes:
	* UPnP and NAT traversal support (Adam J. Warrington, Google Summer of
	  Code)
	* The modify account dialog now contains two tabs, which should display
	  better at lower resolutions (Sadrul Habib Chowdhury)
	* New "find buddy" results dialog (Alex Converse)
	* People using input methods can now use Enter again
	* GNOME users can open received files by clicking on "Open" in the
	  file transfer window
	* Mouse-over hyperlink coloring is now themeable
	* Buddy Pounces now have a proper management window. (Kevin Stange)

	Preference Changes:
	* Preferences have been substantially reorganized and cleaned up
	* Smiley theme descriptions are now shown correctly for the highlighted
	  smiley theme (Levi Bard)
	* All Buddy List preferences have been moved to the Buddies menu of
	  the buddy list window.
	* Proxy settings will be taken from Gnome if it is running.  These may
	  still be overridden on a per-account basis.
	* Removed "Dim idle buddies;" behavior is now always enabled
	* Removed keyboard shortcut preferences for ctrl-B/I/U; enabled by
	  default, but won't interfere with bindings set by the GTK theme
	* Removed keyboard shortcuts preferences for ctrl-# to insert a smiley;
	  behavior removed from Gaim